# cc-memory

./: .env.example  .gitignore  CLAUDE.md  GUARDRAILS.md  README.md  pyproject.toml
docs/: verified-jsonl-format.md
docs/plans/: 20260225-cc-memory-mcp-server.md  20260302-consolidation-intelligence-layer.md
docs/plans/completed/: 20260302-consolidation-intelligence-layer.md
docs/research/: 2026-02-24-compact-research.md
scripts/: install.sh
src/cc_memory/: __init__.py  analyzer.py  config.py  consolidator.py  extractor.py  server.py  storage.py
src/cc_memory/hooks/: __init__.py  pre_compact.py  session_start.py  user_prompt.py
tests/: conftest.py  test_analyzer.py  test_consolidator.py  test_extractor.py  test_grouping.py  test_install.py  test_pre_compact.py  test_server.py  test_session_start.py  test_storage.py  test_user_prompt.py
tests/fixtures/: sample_transcript.jsonl
