[project]
name = "cc-memory"
version = "0.1.0"
description = "Persistent memory bank for Claude Code via MCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0,<2.0",
]

[project.scripts]
cc-memory-server = "cc_memory.server:main"
cc-memory-pre-compact = "cc_memory.hooks.pre_compact:main"
cc-memory-session-start = "cc_memory.hooks.session_start:main"
cc-memory-user-prompt = "cc_memory.hooks.user_prompt:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
